<resources>
    <string name="change_language_settings">Change Language Settings</string>

    <string name="app_name">Movie Catalogue</string>
    <string name="title_tvshow">TV Show</string>
    <string name="title_movies">Movies</string>
    <string name="title">Title</string>
    <string name="genre">Genre</string>
    <string name="description">Description</string>
    <string name="year">Year</string>
    <string name="click_to_read_more">Click To Read More ...</string>
    <string name="poster_tvshow">Poster TvShow</string>
    <string name="poster_movie">Poster Movie</string>
    <string name="movie">Movie</string>
    <string name="tvshow">Tv Show</string>
    <string name="favorite">Favorite</string>
    <string name="favorite_list">Favorite List</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
