<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:cardCornerRadius="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img_movie_item_poster"
            android:layout_width="150dp"
            android:layout_height="220dp"
            android:contentDescription="@string/poster_movie"
            android:scaleType="centerCrop"
            android:src="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_movie_item_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@id/img_movie_item_poster"
            android:text="@string/title"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            app:layout_constraintStart_toEndOf="@id/img_movie_item_poster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/tv_movie_item_year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_movie_item_title"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/darkGrey"
            android:layout_toEndOf="@id/img_movie_item_poster"
            android:text="@string/year"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/tv_movie_item_title"
            app:layout_constraintStart_toEndOf="@id/img_movie_item_poster"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_movie_item_genre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_movie_item_year"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/img_movie_item_poster"
            android:background="@drawable/bg_corner"
            android:gravity="start"
            android:maxWidth="250dp"
            android:text="@string/genre"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/img_movie_item_poster"
            app:layout_constraintTop_toBottomOf="@id/tv_movie_item_year" />

        <TextView
            android:id="@+id/tv_movie_item_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_movie_item_genre"
            android:layout_toEndOf="@+id/img_movie_item_poster"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:textColor="@color/darkGrey"
            android:text="@string/description"
            android:maxLines="3"
            app:layout_constraintTop_toBottomOf="@id/tv_movie_item_genre"
            app:layout_constraintStart_toEndOf="@id/img_movie_item_poster"
            app:layout_constraintEnd_toEndOf="parent" />
        <TextView
            android:id="@+id/tv_movie_item_read_more"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_movie_item_description"
            android:layout_toEndOf="@id/img_movie_item_poster"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:textColor="@android:color/darker_gray"
            android:text="@string/click_to_read_more"
            app:layout_constraintTop_toBottomOf="@id/tv_movie_item_description"
            app:layout_constraintStart_toEndOf="@id/img_movie_item_poster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>